remove dependence of Install directory

--- a/vesdump/Makefile
+++ b/vesdump/Makefile
@@ -1,4 +1,6 @@
-INSTALL = Install_SX7B
+# http://sh-swbuild-01:8080/jenkins/view/UNION1/job/UNION1-SDK_DailyBuild/lastSuccessfulBuild/artifact/DCP_SYS/misc/Install.tgz
+
+INSTALL = Install_UN1
 export PATH := /opt/p111/armv7a/bin:$(PATH)
 
 CC = armv7a-cros-linux-gnueabi-gcc
@@ -10,30 +12,10 @@ INC_DIR = -I ./Inc					\
 	  -I ./$(INSTALL)/Core/Inc/Utility/TridUtil/	\
 	  -I ./$(INSTALL)/Core/Inc/HAL/Inc/
 
-LIB_DIR = -L ./$(INSTALL)/Core/Lib
-
-LIBS := -lUtility	\
-	-lCPUComm	\
-	-lhalvideo	\
-	-lhalaudio	\
-	-lhalavstream	\
-	-lhalavsync	\
-	-lDemux		\
-	-lhalsound	\
-	-lDisplay	\
-	-lHalSPI	\
-	-lTridXMLParser	\
-	-lhalcom	\
-	-lhalcp		\
-	-lpthread	\
-	-lm		\
-	-lrt		\
-	-lstdc++
-
-all: vesdump
+all: printmsg
 
 clean:
 	rm vesdump
 
-vesdump: vesdump.c pman.c mem_map.c udpsvr.c
+printmsg: printmsg.c pman.c mem_map.c udpsvr.c comm_get_addr.c Trid_Util_CPUComm_Call.c Trid_Util_CPUComm_Init.c Trid_Util_CRC32.c
 	$(CC) -o $@ $^ $(LIB_DIR) $(LIBS) $(INC_DIR) -D CONFIG_ENDIAN_LITTLE
