--- a/Windows/Projects/tcp_client/tcp_client.vcxproj
+++ b/Windows/Projects/tcp_client/tcp_client.vcxproj
@@ -136,6 +136,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\lib\log.cpp" />
     <ClCompile Include="..\..\lib\tcp_client.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
