--- a/Windows/VS2008/avlib/avlib.vcproj
+++ b/Windows/VS2008/avlib/avlib.vcproj
@@ -166,11 +166,23 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\3rdparty\getopt9\getopt.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\lib\hexdump.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\..\lib\log.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\lib\mpegformat.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\lib\param_parser.cpp"
 				>
 			</File>
 			<File
